# milvus-ingestion

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  example_schema.json  pyproject.toml  schema.json
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  project-management.yml  release.yml  security.yml  update-lockfile.yml
bench/: README.md  __init__.py  benchmark_generator.py  benchmark_optimized.py  profile_memory.py  run_benchmarks.sh
deploy/: docker-compose.yml
docs/: README.md
docs/commands/: clean.md  generate.md  schema.md  to-milvus.md  upload.md
docs/examples/: README.md
docs/tutorials/: complete-workflow.md  json-format-guide.md  performance.md  quickstart.md
src/milvus_fake_data/: __init__.py  builtin_schemas.py  cli.py  generator.py  milvus_importer.py  milvus_inserter.py  models.py  optimized_writer.py  rich_display.py  schema_manager.py  uploader.py  zilliz_importer.py
src/milvus_ingest/: builtin_schemas.py  cli.py  milvus_importer.py  milvus_inserter.py  optimized_writer.py  rich_display.py
tests/: conftest.py  test_builtin_schemas.py  test_cli.py  test_importers.py  test_schema_manager.py  test_uploader.py
