[project]
name = "milvus-fake-data"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "zhuwenxing", email = "wenxing.zhu@zilliz.com"},
]
dependencies = [
    "faker>=23.0.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "pyarrow>=14.0.0",
    "click>=8.0.0",
    "pyyaml>=6.0.0",
    "pymilvus[bulk_writer]",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = true

[tool.uv]
package = true

[project.scripts]
milvus-fake-data = "milvus_fake_data.cli:main"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
